story and hp: fix overflow scroll on homepage_story

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -78,9 +78,13 @@ div.homepage_story {
   background-attachment: fixed;
   // color: #238BFF;
   padding-top: 56px;
+  // overflow: scroll;
+  // width: 100%;
 
   .story {
     color: white;
+    overflow: scroll;
+    height: 100%;
     // height: 800px;
   }
   h2 {
@@ -334,7 +338,19 @@ div.homepage_story {
   }
   .destination-name {
     display: block;
-    font-size: 1.5em;
     padding-top: 43%;
+    font-size: 1.8em;
+    small {
+      font-size: 0.8em;
+    }
+  }
+  div.homepage_story {
+    overflow: scroll;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 860px) {
+  .hide-xs{
+    display: none;
   }
 }
